@@ -8,6 +8,7 @@
 package org.dspace.app.rest.repository;
 
 import java.io.IOException;
+import tools.jackson.core.JacksonException;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.LinkedList;
@@ -16,8 +17,8 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import tools.jackson.databind.JsonNode;
+import tools.jackson.databind.ObjectMapper;
 import jakarta.servlet.http.HttpServletRequest;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -242,7 +243,7 @@ public class RelationshipRestRepository extends DSpaceRestRepository<Relationshi
 
             try {
                 relationshipRest = mapper.readValue(jsonNode.toString(), RelationshipRest.class);
-            } catch (IOException e) {
+            } catch (JacksonException e) {
                 throw new UnprocessableEntityException("Error parsing request body: " + e.toString());
             }
 
@@ -366,8 +367,7 @@ public class RelationshipRestRepository extends DSpaceRestRepository<Relationshi
             EntityType dsoEntityType = itemService.getEntityType(context, item);
 
             if (dsoEntityType == null) {
-                throw new UnprocessableEntityException(String.format(
-                    "The request DSO with id: %s doesn't have an entity type", dsoId));
+                throw new UnprocessableEntityException("The request DSO with id: %s doesn't have an entity type".formatted(dsoId));
             }
 
             for (RelationshipType relationshipType : relationshipTypeList) {
